--- a/src/components/CardClock.astro
+++ b/src/components/CardClock.astro
@@ -1,8 +1,10 @@
-<div class="shadow-grid hover:shadow-grid-hover overflow-hidden relative row-start-3 col-start-3 flex flex-col px-6 py-3 gap-y-1 border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 text-sky-400 text-pretty rounded-3xl">
-    <div id="spotClock1" class="absolute z-10 duration-1000 size-72 rounded-full bg-sky-900 opacity-50 blur-md ml-16 -mt-56" />
-    <div id="spotClock2" class="absolute z-10 duration-1000 size-12 rounded-full bg-blue-800 opacity-70 blur-md ml-24 mt-2" />
+<div class="shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover overflow-hidden relative row-start-3 col-start-3 flex flex-col px-6 py-3 border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 backdrop-blur-sm bg-opacity-40 text-sky-700 dark:text-sky-400 text-pretty rounded-3xl">
+    
+    <div id="spotClock1" class="absolute z-10 duration-1000 size-72 rounded-full bg-sky-400 dark:bg-sky-900 opacity-50 blur-md ml-16 -mt-56" />
+    <div id="spotClock2" class="absolute z-10 duration-1000 size-12 rounded-full bg-blue-400 dark:bg-blue-800 opacity-70 blur-md ml-24 mt-2" />
     <p id="time" class="opacity-0 transition duration-1000 ease z-20 text-[32px] font-bold" />
     <p id="date" class="opacity-0 transition duration-1000 ease z-20 text-xs font-semibold" />
+
 </div>
 
 <script>    
