--- a/src/components/CardProfilePhoto.astro
+++ b/src/components/CardProfilePhoto.astro
@@ -8,4 +8,4 @@ interface Props {
 const { img } = Astro.props;
 ---
 
-<div class="shadow-grid hover:shadow-grid-hover test col-start-1 row-start-2 row-span-2 rounded-3xl transition-transform duration-300 hover:scale-105" style={`background-image: url('${img}'); background-size:cover;`} >
+<div class="shadow-grid-mini hover:shadow-none dark:shadow-grid hover:dark:shadow-grid-hover col-start-1 row-start-2 row-span-2 rounded-3xl transition-transform border-[#212121] duration-300 hover:scale-105" style={`background-image: url('${img}'); background-size:cover;`} >
