--- a/src/components/CardTitle.astro
+++ b/src/components/CardTitle.astro
@@ -10,13 +10,13 @@ import { getLangFromUrl, useTranslations } from '../i18n/utils';
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
-<div class="shadow-grid hover:shadow-grid-hover row-start-1 col-start-1 col-span-3 flex items-center overflow-hidden border-[#212121] icon backdrop-blur-sm bg-opacity-40 rounded-3xl">
-    <div id="spotTitle1" class="absolute z-10 duration-1000 size-96 rounded-full bg-indigo-700 opacity-30 blur-md mb-[320px] ml-[400px]" />
-    <div id="spotTitle2" class="absolute z-10 duration-1000 size-12 rounded-full bg-sky-700 opacity-50 blur-md mt-6 ml-[660px]" />
-    <div id="spotTitle3" class="absolute z-10 duration-1000 size-24 rounded-full bg-cyan-600 opacity-30 blur-md mt-1 ml-32" />
+<div class="shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover row-start-1 col-start-1 col-span-3 flex items-center overflow-hidden border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 icon backdrop-blur-sm bg-opacity-40 rounded-3xl">
+    <div id="spotTitle1" class="absolute z-10 duration-1000 size-96 rounded-full bg-indigo-400 dark:bg-indigo-700 opacity-30 blur-md mb-[320px] ml-[400px]" />
+    <div id="spotTitle2" class="absolute z-10 duration-1000 size-12 rounded-full bg-sky-400 dark:bg-sky-700 opacity-50 blur-md mt-6 ml-[660px]" />
+    <div id="spotTitle3" class="absolute z-10 duration-1000 size-24 rounded-full bg-cyan-400 dark:bg-cyan-600 opacity-30 blur-md mt-1 ml-32" />
     
-    <h1 class="z-20 text-white mx-6 text-2xl md:text-4xl lg:text-5xl font-bold"> 
-        {t('title.text')} <span class="text-sky-400 bg-gradient-to-r from-sky-400 from-0% via-[#ffffff] via-5% to-sky-400 to-10% text-transparent bg-clip-text animate-[shine_3s_linear_infinite]"> {name} </span>
+    <h1 class="z-20 duration-1000 text-gray-800/80 dark:text-white mx-6 text-2xl md:text-4xl lg:text-5xl font-bold"> 
+        {t('title.text')} <span class="bg-gradient-to-r from-sky-700 from-0% via-sky-200 via-5% to-sky-700 to-10% dark:from-sky-400 dark:from-0% dark:via-[#ffffff] dark:via-5% dark:to-sky-400 to-10% text-transparent bg-clip-text animate-[shine_3s_linear_infinite]"> {name} </span>
     </h1>	
 </div>
 
